Tom Berg 10/17/2020 -- Fix layout issues on registration page. These layout issues also apply to login page. Add jquery logic to only display password strength indicator when password field is not empty. Change input borders and validation messages on registration page to be red if user input error. Change wording of user input error messages. Change wording of some instructions on getting started page.

--- a/src/main/resources/static/css/forms.css
+++ b/src/main/resources/static/css/forms.css
@@ -1,6 +1,19 @@
 body {
   background-color: #00416A; }
 
+.progress {
+  margin-bottom: 0;
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -mx-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
 .container-fluid {
   margin-top: 100px; }
 
